# polymarket

./: .env.ethereal.example  .env.example  .gitignore  Dockerfile  ETHEREAL.md  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: __init__.py  main.py
app/alerts/: notifier.py
app/api/: __init__.py  app.py  dependencies.py
app/config/: settings.py
app/core/: __init__.py  logging.py  runtime.py  state.py  types.py
app/data/: __init__.py  crypto_prices.py  polymarket.py
app/ethereal/: __init__.py  bot.py  client.py  config.py  signing.py  strategy.py
app/execution/: __init__.py  order_manager.py
app/risk/: engine.py
app/storage/: __init__.py  database.py  repositories.py
app/strategies/: base.py  btc_5m_mean_reversion.py  btc_5m_momentum.py  btc_late_convexity.py  conservative_mm.py  registry.py
app/tests/: conftest.py
app/tests/integration/: test_startup_safety.py  test_ws_handling.py
app/tests/unit/: test_btc_late_convexity.py  test_config.py  test_ethereal_points_bot_strategy.py  test_ethereal_signing.py  test_order_manager.py  test_polymarket_client.py  test_risk.py  test_strategy.py
app/ws/: __init__.py  polymarket_ws.py
configs/: dev.yaml  production.yaml  staging.yaml  strategy.example.yaml
docs/: trading-strategies.md
migrations/: alembic.ini  env.py
migrations/versions/: 0001_initial_schema.py
scripts/: ethereal_account_overview.py  ethereal_generate_signer.py  ethereal_link_signer.py  ethereal_points_bot.py  migrate.py
